Docker support (#382)
Also add db init command line option and docker secret support